# SBTUITestTunnel

./: .gitignore  BUILD.bazel  WORKSPACE
Example/SBTUITestTunnel_Tests/: CoreLocationTests.swift
Pod/Server/: SBTUITestTunnelServer.m
Sources/SBTUITestTunnelClient/: SBTUITestTunnelClient.m  SBTUITunneledApplication.m  XCTestCase+AppExtension.m
Sources/SBTUITestTunnelClient/include/: SBTUITestTunnelClient.h  SBTUITunneledApplication.h
Sources/SBTUITestTunnelCommon/: NSData+gzip.m  NSURLRequest+HTTPBodyFix.m  SBTMonitoredNetworkRequest.m  SBTRegularExpressionMatcher.m  SBTRequestMatch.m  SBTRewrite.m  SBTRewriteReplacement.m  SBTStubFailureResponse.m  SBTStubResponse.m  SBTUITestTunnel.m
Sources/SBTUITestTunnelCommon/DetoxIPC/: DTXIPCConnection-Private.h  DTXIPCConnection.h  DTXIPCConnection.m  DTXIPCListener.m  _DTXIPCDistantObject.m  _DTXIPCExportedObject.m
Sources/SBTUITestTunnelCommon/DetoxIPC/Apple/: NSConnection.m
Sources/SBTUITestTunnelCommon/DetoxIPC/DTXObjectiveCHelpers/: DTXQuickNSExpressions.h  NSArray+Utils.m  NSMapTable+Subscripting.m  NSObject+AttachedObjects.m  NSString+FileNames.m  NSString+QuotedStringForJS.m  NSString+Trimming.m  Swiftier.h
Sources/SBTUITestTunnelCommon/DetoxIPC/fno-objc-arc/: NSInvocation+DTXRemoteSerialization.m  _DTXIPCRemoteBlockRegistry.m
Sources/SBTUITestTunnelCommon/include/: SBTRequestMatch.h  SBTStubFailureResponse.h  SBTUITestTunnelCommon.h
Sources/SBTUITestTunnelServer/: SBTAnyViewControllerPreviewing.m  SBTUITestTunnelServer.m  UIViewController+SBTUITestTunnel.m
Sources/SBTUITestTunnelServer/include/: SBTUITestTunnelServer.h
Sources/SBTUITestTunnelServer/private/: CLLocationManager+Swizzles.m  NSURLSession+HTTPBodyFix.m  NSURLSessionConfiguration+SBTUITestTunnel.m  SBTProxyURLProtocol.m  UITextField+DisableAutocomplete.m  UIView+Extensions.m  UNUserNotificationCenter+Swizzles.m
